--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/node": "^20.11.0",
     "@types/react": "^18.2.46",
     "@types/react-dom": "^18.2.18",
     "@types/webpack": "^5.28.5",
@@ -26,10 +27,13 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.15.3",
     "@mui/material": "^5.15.2",
+    "@mui/x-charts": "^6.18.7",
     "axios": "^1.6.5",
     "babel": "^6.23.0",
     "babel-loader": "^9.1.3",
     "babel-preset-es2015": "^6.24.1",
+    "chart.js": "^3.9.1",
+    "date-fns": "^3.2.0",
     "html-webpack-plugin": "^5.6.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
