--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,7 +14,7 @@
       "noUnusedLocals": true,
       "noUnusedParameters": true,
       "noFallthroughCasesInSwitch": true,
-      
+      "types": ["chart.js","node"],
     },
     "include": ["src"],
 }
