--- a/package.json
+++ b/package.json
@@ -1,11 +1,14 @@
 {
+  "homepage": "https://khodosevich.github.io/crypto-app",
   "name": "crypto-app",
   "version": "1.0.0",
   "description": "",
   "main": "Main.tsx",
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "webpack serve --open --mode development",
-    "build": "webpack --config webpack.prod.ts"
+    "build": "webpack --mode production"
   },
   "author": "",
   "license": "ISC",
@@ -34,6 +37,7 @@
     "babel-preset-es2015": "^6.24.1",
     "chart.js": "^3.9.1",
     "date-fns": "^3.2.0",
+    "gh-pages": "^6.1.1",
     "html-webpack-plugin": "^5.6.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
